--- a/MemoryGame/index.html
+++ b/MemoryGame/index.html
@@ -7,7 +7,18 @@
 		<link rel="stylesheet" href="../css/main.css">
 		<script type="module" src="../js/main.js"></script>
 	</head>
-	<body>
-		
+	<body class="body-memorygame">
+		<h3 class="memorygame__score">Score: <span class="memory-game__result"></span></h3>
+
+		<div class="memory-game__grid"></div>
+
+		<div class="congratulations">
+			<span class="congratulations__title">CONGRATULATIONS</span>
+			<button class="congratulations__button-go-again">Go again</button>
+		</div>
+
+		<footer>
+			<a href="../index.html">Back to Homepage</a>
+		</footer>
 	</body>
 </html>
