--- a/index.html
+++ b/index.html
@@ -15,11 +15,14 @@
 				<span class="card__title">PLAY</span>
 				Rock Paper Scissors
 			</a>
-			
-			<a class="games-container__card" href="">
+
+			<a class="games-container__card" href="./MemoryGame/index.html">
+				<img class="card__image" src="./assets/memorygame/thumbnailpicture.png" alt="">
 				<span class="card__title">PLAY</span>
 				Memory Game
 			</a>
+			
+			
 		</section>
 	</body>
 </html>
