--- a/index.html
+++ b/index.html
@@ -22,6 +22,12 @@
 				Memory Game
 			</a>
 			
+			<a class="games-container__card" href="./Whackamole/index.html">
+				<img class="card__image" src="./assets/memorygame/thumbnailpicture.png" alt="">
+				<span class="card__title">PLAY</span>
+				Whack-A-Mole
+			</a>
+			
 			
 		</section>
 	</body>
