--- a/Whackamole/index.html
+++ b/Whackamole/index.html
@@ -7,7 +7,9 @@
 		<link rel="stylesheet" href="/css/main.css">
 		<script type="module" src="/js/main.js"></script>
 	</head>
-	<body>
-		hei
+	<body class="body-whackamole">
+		<section class="body-whackamole__whackamole">
+
+		</section>
 	</body>
 </html>
