started whackamole, added containers and img

--- a/Whackamole/index.html
+++ b/Whackamole/index.html
@@ -9,7 +9,33 @@
 	</head>
 	<body class="body-whackamole">
 		<section class="body-whackamole__whackamole">
+			<div class="whackamole__top-container">
+				<h2 class="top-container__your-score">
+					Your Score: 
+					<span class="your-score__value"></span>
+				</h2>
 
+				<h2 class="top-container__time-left">
+					Time left: 
+					<span class="time-left__value">60</span>
+				</h2>
+			</div>
+
+			<div class="whackamole-grid-container">
+				<button class="whackamole-grid-container__square square__mole" id="1"></button>
+				<button class="whackamole-grid-container__square" id="2"></button>
+				<button class="whackamole-grid-container__square" id="3"></button>
+				<button class="whackamole-grid-container__square" id="4"></button>
+				<button class="whackamole-grid-container__square" id="5"></button>
+				<button class="whackamole-grid-container__square" id="6"></button>
+				<button class="whackamole-grid-container__square" id="7"></button>
+				<button class="whackamole-grid-container__square" id="8"></button>
+				<button class="whackamole-grid-container__square" id="9"></button>
+			</div>
 		</section>
+
+		<footer>
+			<a href="../index.html">Back to Homepage</a>
+		</footer>
 	</body>
 </html>
