game whackamole added

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 			</a>
 			
 			<a class="games-container__card" href="./Whackamole/index.html">
-				<img class="card__image" src="./assets/memorygame/thumbnailpicture.png" alt="">
+				<img class="card__image" src="./assets/whackamole/mole.png" alt="">
 				<span class="card__title">PLAY</span>
 				Whack-A-Mole
 			</a>
