--- a/Whackamole/index.html
+++ b/Whackamole/index.html
@@ -8,11 +8,17 @@
 		<script type="module" src="/js/main.js"></script>
 	</head>
 	<body class="body-whackamole">
-		<section class="body-whackamole__whackamole">
+		<button class="whackamole__button-start">START</button>
+		<section class="body-whackamole__whackamole body-whackamole__whackamole--hidden">
 			<div class="whackamole__top-container">
+				<h2 class="top-container__your-score-big--hidden">
+					 
+					<span class="your-score__value-big--hidden">0</span>
+				</h2>
+				
 				<h2 class="top-container__your-score">
 					Your Score: 
-					<span class="your-score__value"></span>
+					<span class="your-score__value">0</span>
 				</h2>
 
 				<h2 class="top-container__time-left">
@@ -22,7 +28,7 @@
 			</div>
 
 			<div class="whackamole-grid-container">
-				<button class="whackamole-grid-container__square square__mole" id="1"></button>
+				<button class="whackamole-grid-container__square" id="1"></button>
 				<button class="whackamole-grid-container__square" id="2"></button>
 				<button class="whackamole-grid-container__square" id="3"></button>
 				<button class="whackamole-grid-container__square" id="4"></button>
@@ -32,6 +38,8 @@
 				<button class="whackamole-grid-container__square" id="8"></button>
 				<button class="whackamole-grid-container__square" id="9"></button>
 			</div>
+
+			<button class="whackamole__play-again--hidden">PLAY AGAIN</button>
 		</section>
 
 		<footer>
