adding breakout-game. stuck at collisions

--- a/index.html
+++ b/index.html
@@ -28,6 +28,12 @@
 				Whack-A-Mole
 			</a>
 			
+			<a class="games-container__card" href="./breakout/index.html">
+				<img class="card__image" src="./assets/breakout/atari-breakout.jpg" alt="">
+				<span class="card__title">PLAY</span>
+				Breakout
+			</a>
+			
 			
 		</section>
 	</body>
